--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <meta property="og:description" content="Sketch fast. Refine precisely. Export clean SVG." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <link rel="manifest" href="/manifest.webmanifest" />
+    <link rel="icon" type="image/svg+xml" href="/icons/app-icon.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@roughrefine" />
